--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 <nav class="navbar navbar-fixed-top" style="margin-top: -5px">
     <div class="container">
-        <div class="col-lg-12 well">
+        <div class="col-xs-12 well">
             <form id="mainForm" class="form-inline col-lg-offset-4">
                 <div class="form-group">
                     <label for="titleInput">Learning</label>
